Docker_Kubernetes/yaml/zabbix/ext-mysql-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: zabbixdb
spec:
  ports:
  - port: 3306
    targetPort: 3306
---
kind: Endpoints
apiVersion: v1
metadata:
  name: zabbixdb
subsets:
  - addresses:
      - ip: 10.67.38.246
    ports:
      - port: 3306
