Docker_Kubernetes/yaml/zabbix/zabbix-server-mysql.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: zabbix-server-mysql
  namespace: default
  labels:
    app: zabbix-server-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zabbix-server-mysql
  template:
    metadata:
      labels:
        app: zabbix-server-mysql
    spec:
      containers:
      - name: zabbix-server-mysql
        image: zabbix/zabbix-server-mysql:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 10051
          protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: zabbix-server-mysql
  labels:
    app: zabbix-server-mysql
spec:
  selector:
    app: zabbix-server-mysql
  ports:
  - protocol: TCP
    port: 10051
    nodePort: 30051
  type: NodePort
